# video_processing_project

./: .gitignore  CMakeLists.txt  README.md
src/: Image.cpp  Image.hh  main.cpp
src/app/: App.cpp  App.hh  SDLManager.cpp  SDLManager.hh
tools/: README.mpeg2dec
tools/mpeg2dec/: Makefile  config.status  libtool
tools/mpeg2dec/doc/: Makefile
tools/mpeg2dec/include/: Makefile  config.h
tools/mpeg2dec/libmpeg2/: Makefile  alloc.lo  decode.lo  header.c  header.lo  idct.lo  libmpeg2.la  libmpeg2arch_la-cpu_accel.lo  libmpeg2arch_la-cpu_state.lo  libmpeg2arch_la-idct_alpha.lo  libmpeg2arch_la-idct_altivec.lo  libmpeg2arch_la-idct_mmx.lo  libmpeg2arch_la-motion_comp_alpha.lo  libmpeg2arch_la-motion_comp_altivec.lo  libmpeg2arch_la-motion_comp_arm.lo  libmpeg2arch_la-motion_comp_mmx.lo  libmpeg2arch_la-motion_comp_vis.lo  motion_comp.lo  slice.lo
tools/mpeg2dec/libmpeg2/.deps/: alloc.Plo  decode.Plo  header.Plo  idct.Plo  libmpeg2arch_la-cpu_accel.Plo  libmpeg2arch_la-cpu_state.Plo  libmpeg2arch_la-idct_alpha.Plo  libmpeg2arch_la-idct_altivec.Plo  libmpeg2arch_la-idct_mmx.Plo  libmpeg2arch_la-motion_comp_alpha.Plo  libmpeg2arch_la-motion_comp_altivec.Plo  libmpeg2arch_la-motion_comp_arm.Plo  libmpeg2arch_la-motion_comp_mmx.Plo  libmpeg2arch_la-motion_comp_vis.Plo  motion_comp.Plo  slice.Plo
tools/mpeg2dec/libmpeg2/.libs/: libmpeg2.lai  libmpeg2.so.0.1.0
tools/mpeg2dec/libvo/: Makefile
tools/mpeg2dec/src/: Makefile  corrupt_mpeg2  dump_state.c  extract_mpeg2  mpeg2dec
tools/mpeg2dec/test/: Makefile
tools/mpeg2dec/vc++/: Makefile
(+26 files in other folders)
